Make syntax changes so java11 jdk can build jvector